ch02: add simple tokenizer v2

--- a/exercises/ch-02/the-verdict.ipynb
+++ b/exercises/ch-02/the-verdict.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "f38cb0a1-472a-4bd4-a900-6744cfe25036",
    "metadata": {},
    "outputs": [
@@ -206,12 +206,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2 \n",
     "%reload_ext autoreload\n",
-    "from simple_tokenizer import SimpleTokenizerV1 "
+    "from simple_tokenizer import SimpleTokenizerV1, SimpleTokenizerV2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "cb605d09-c8f6-41f3-aed1-deac2a2b908b",
    "metadata": {},
    "outputs": [
@@ -252,9 +252,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73f84847-7dfc-4cb6-bde7-db6f100fedf2",
+   "metadata": {},
+   "source": [
+    "## Adding <|endoftext|> token\n",
+    "`<|unk|>` represents token that is unknown to the vocabulary.\n",
+    "\n",
+    "`<|endoftext|>` token is used for separating documents (two separated unrelated sources)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "177624da-d79f-4167-b428-cc4f91b03bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tokens = sorted(list(set(result)))\n",
+    "all_tokens.extend([\"<|endoftext|>\", \"<|unk|>\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "bf6f44e7-41eb-437c-900d-5dc8e5f362fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = {s:i for i,s in enumerate(all_tokens)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e9e400e6-6414-4004-b3f1-bc9558958328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "younger\n",
+      "your\n",
+      "yourself\n",
+      "<|endoftext|>\n",
+      "<|unk|>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, data in enumerate(list(vocab.items())[-5:]):\n",
+    "    print(data[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0890c8ab-0c3a-4d0f-8820-63d5b72cb2f5",
+   "metadata": {},
+   "source": [
+    "## Trying new SimpleTokenizerV2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "7168a2ef-db23-436d-a3f5-8275975de469",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, do you like tea? <|endoftext|> In the sunlit terraces of the palace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text1 = \"Hello, do you like tea?\"\n",
+    "text2 = \"In the sunlit terraces of the palace.\"\n",
+    "text = \" <|endoftext|> \".join((text1, text2))\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8563d648-8744-4852-917b-657a6f82277a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = SimpleTokenizerV2(vocab)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8ff2768a-e8a2-4274-8c5d-84ccedb541c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1131, 5, 355, 1126, 628, 975, 10, 1130, 55, 988, 956, 984, 722, 988, 1131, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded = tokenizer.encode(text)\n",
+    "print(encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "90298c71-9428-4355-8a16-0483bb738645",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<|unk|>, do you like tea? <|endoftext|> In the sunlit terraces of the <|unk|>.'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(encoded)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fbb3975-e5c3-47e8-bced-33d1f6b1f05f",
+   "id": "0a90de88-45a2-4cc1-a893-d8e810429fed",
    "metadata": {},
    "outputs": [],
    "source": []
