concepts(ch03): attention mechanism

--- a/exercises/ch-02/3_data-loader.ipynb
+++ b/exercises/ch-02/3_data-loader.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "006e0879-87ac-472c-80dd-57ca10168e1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2 "
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "13f4759e-4199-41c8-a3bc-a90992f05a5c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "fd01085b-804e-41df-9d9d-b0045239265b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "3811ce58-eefe-4c2f-871e-d577fa9a737f",
    "metadata": {},
    "outputs": [
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "80003d9a-caa9-441e-9b71-d1a972fd683c",
    "metadata": {},
    "outputs": [
@@ -109,8 +100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " good fellow enough--so it was no great surprise to me to hear that,\n",
-      " fellow enough--so it was no great surprise to me to hear that, in\n"
+      " good fellow enough--soso it was no great great surprise to me to to hear that, in\n",
+      " fellow enough--so it it was no great surprise surprise to me to hear hear that, in the\n"
      ]
     }
    ],
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "7c49816d-5993-4c50-8e51-fe4db85e8773",
    "metadata": {},
    "outputs": [
@@ -130,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[922, 5891, 1576, 438, 568, 340, 373, 645, 1049, 5975, 284, 502, 284, 3285, 326, 11]\n",
-      "[5891, 1576, 438, 568, 340, 373, 645, 1049, 5975, 284, 502, 284, 3285, 326, 11, 287]\n"
+      "[922, 5891, 1576, 438, 568, 568, 340, 373, 645, 1049, 1049, 5975, 284, 502, 284, 284, 3285, 326, 11, 287]\n",
+      "[5891, 1576, 438, 568, 340, 340, 373, 645, 1049, 5975, 5975, 284, 502, 284, 3285, 3285, 326, 11, 287, 262]\n"
      ]
     }
    ],
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "23b59b5c-5b19-41d7-9cb8-e62ab4ea4555",
    "metadata": {},
    "outputs": [],
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "e394c5cf-a6a4-4e89-a6a6-b9bac0800a1d",
    "metadata": {},
    "outputs": [
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "ddd4c1ff-d96f-4743-b2f1-9d2a8e269e3a",
    "metadata": {},
    "outputs": [
@@ -213,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "4c976474-09fe-4302-8691-256157bb5875",
    "metadata": {},
    "outputs": [
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "f91f4a3b-6f66-4bc0-a147-2f886fbc8005",
    "metadata": {},
    "outputs": [],
@@ -255,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "f67b2524-055f-4eaa-8e66-23cf69817b2b",
    "metadata": {},
    "outputs": [
@@ -302,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "id": "a32b8c2d-af42-490f-a053-adca690436af",
    "metadata": {},
    "outputs": [
@@ -310,37 +301,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[-1.0959,  2.5001, -0.2386,  ..., -0.2843, -0.0595, -2.9774],\n",
-      "         [ 1.2999, -0.2026,  0.2868,  ...,  0.3538,  0.4325,  0.1034],\n",
-      "         [ 0.4132,  1.0143,  0.7025,  ...,  0.9639, -0.3068, -0.5022],\n",
-      "         [ 0.9415,  0.2304,  0.2031,  ..., -1.4875, -0.4111,  0.1622]],\n",
+      "tensor([[[ 0.4913,  1.1239,  1.4588,  ..., -0.3995, -1.8735, -0.1445],\n",
+      "         [ 0.4481,  0.2536, -0.2655,  ...,  0.4997, -1.1991, -1.1844],\n",
+      "         [-0.2507, -0.0546,  0.6687,  ...,  0.9618,  2.3737, -0.0528],\n",
+      "         [ 0.9457,  0.8657,  1.6191,  ..., -0.4544, -0.7460,  0.3483]],\n",
       "\n",
-      "        [[ 0.1835,  1.1688,  1.1278,  ...,  1.4673,  0.6057,  0.0393],\n",
-      "         [-1.1705,  0.3697, -0.2569,  ...,  1.1635,  1.5043,  0.3175],\n",
-      "         [-0.0125,  0.9496,  0.2021,  ..., -0.6233,  0.4895, -0.7510],\n",
-      "         [-0.4698, -0.6528, -0.0185,  ..., -1.0879, -1.1240, -0.1663]],\n",
+      "        [[ 1.5460,  1.7368, -0.7848,  ..., -0.1004,  0.8584, -0.3421],\n",
+      "         [-1.8622, -0.1914, -0.3812,  ...,  1.1220, -0.3496,  0.6091],\n",
+      "         [ 1.9847, -0.6483, -0.1415,  ..., -0.3841, -0.9355,  1.4478],\n",
+      "         [ 0.9647,  1.2974, -1.6207,  ...,  1.1463,  1.5797,  0.3969]],\n",
       "\n",
-      "        [[-0.2626,  1.6236,  1.0381,  ..., -0.5674, -0.5155, -0.3560],\n",
-      "         [ 1.0093,  0.4322,  1.1229,  ...,  0.5505,  0.8287,  0.2565],\n",
-      "         [ 1.6100,  1.7726,  1.2413,  ...,  0.4848,  0.0433, -0.8027],\n",
-      "         [-0.8902, -0.6900, -0.0111,  ...,  0.3174,  0.3603,  0.7784]],\n",
+      "        [[-0.7713,  0.6572,  0.1663,  ..., -0.8044,  0.0542,  0.7426],\n",
+      "         [ 0.8046,  0.5047,  1.2922,  ...,  1.4648,  0.4097,  0.3205],\n",
+      "         [ 0.0795, -1.7636,  0.5750,  ...,  2.1823,  1.8231, -0.3635],\n",
+      "         [ 0.4267, -0.0647,  0.5686,  ..., -0.5209,  1.3065,  0.8473]],\n",
       "\n",
       "        ...,\n",
       "\n",
-      "        [[-1.7247,  0.0625,  2.6613,  ..., -1.1390,  0.8513, -1.2999],\n",
-      "         [-0.5793, -2.1328,  0.5108,  ..., -0.1247,  0.0370, -1.9039],\n",
-      "         [ 1.2627, -1.5882,  0.4550,  ...,  0.0532, -0.8638, -1.3855],\n",
-      "         [ 2.2630,  1.6763, -0.4898,  ...,  0.6150,  0.0883,  1.0934]],\n",
+      "        [[-1.6156,  0.9610, -2.6437,  ..., -0.9645,  1.0888,  1.6383],\n",
+      "         [-0.3985, -0.9235, -1.3163,  ..., -1.1582, -1.1314,  0.9747],\n",
+      "         [ 0.6089,  0.5329,  0.1980,  ..., -0.6333, -1.1023,  1.6292],\n",
+      "         [ 0.3677, -0.1701, -1.3787,  ...,  0.7048,  0.5028, -0.0573]],\n",
       "\n",
-      "        [[-1.9182, -0.2583, -0.9909,  ..., -0.9617, -0.2731, -1.3843],\n",
-      "         [ 0.6737,  0.9553,  1.2504,  ...,  0.2198,  0.9796,  0.8129],\n",
-      "         [ 0.1408, -1.2160,  0.4930,  ...,  1.3862,  0.4785, -0.5272],\n",
-      "         [-1.0252, -0.1231, -1.0857,  ...,  1.5461, -0.0284,  1.3449]],\n",
+      "        [[-0.1279,  0.6154,  1.7173,  ...,  0.3789, -0.4752,  1.5258],\n",
+      "         [ 0.4861, -1.7105,  0.4416,  ...,  0.1475, -1.8394,  1.8755],\n",
+      "         [-0.9573,  0.7007,  1.3579,  ...,  1.9378, -1.9052, -1.1816],\n",
+      "         [ 0.2002, -0.7605, -1.5170,  ..., -0.0305, -0.3656, -0.1398]],\n",
       "\n",
-      "        [[ 0.1408, -1.2160,  0.4930,  ...,  1.3862,  0.4785, -0.5272],\n",
-      "         [ 0.8758, -0.1053,  0.6066,  ...,  0.3554, -0.5082, -0.8212],\n",
-      "         [ 0.4925,  0.5227,  0.5674,  ...,  1.3629,  1.2974, -0.2069],\n",
-      "         [ 1.6795,  0.4858, -1.3189,  ...,  1.2656,  0.3349,  2.4488]]],\n",
+      "        [[-0.9573,  0.7007,  1.3579,  ...,  1.9378, -1.9052, -1.1816],\n",
+      "         [-0.0632, -0.6548, -1.0296,  ..., -0.9538, -0.5026, -0.1128],\n",
+      "         [ 0.6032,  0.8983,  2.0722,  ...,  1.5242,  0.2030, -0.3002],\n",
+      "         [ 1.1274, -0.1082, -0.2195,  ...,  0.5059, -1.8138, -0.0700]]],\n",
       "       grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
@@ -362,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "348cd1e3-7c31-4150-b727-f17c4a141408",
    "metadata": {},
    "outputs": [
