exercise(ch03): attention weights

--- a/exercises/ch-03/attention.ipynb
+++ b/exercises/ch-03/attention.ipynb
@@ -2,14 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1e2f9d16-87ad-4a9a-837e-bd85431aea7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2 "
+    "%autoreload 2 \n",
+    "import torch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d1677f57-b8f1-4387-9761-9c9124121087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = torch.tensor(\n",
+    "    [[0.43, 0.15, 0.89], # Your     (x^1)\n",
+    "     [0.55, 0.87, 0.66], # journey  (x^2)\n",
+    "     [0.57, 0.85, 0.64], # starts   (x^3) \n",
+    "     [0.22, 0.58, 0.33], # with     (x^4)\n",
+    "     [0.77, 0.25, 0.10], # one      (x^5)\n",
+    "     [0.05, 0.80, 0.55]] # step     (x*6)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3106517b-91fe-4226-a72b-1a1263117455",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 3])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = inputs[1]\n",
+    "attn_scores_2 = torch.empty(inputs.shape[0])\n",
+    "inputs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f355477b-3917-49d5-b611-0b671d897a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = inputs[1]\n",
+    "attn_scores_2 = torch.empty(inputs.shape[0]) # create empty tensor with `vocab_size` sized \n",
+    "for i, embed in enumerate(inputs):\n",
+    "    attn_scores_2[i] = query.dot(embed) # or torch.dot(embed,  query)\n",
+    "print(attn_scores_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da4ef91d-cb9f-4dd3-b75d-187b19545a08",
+   "metadata": {},
+   "source": [
+    "# Normalizing the attention weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0274ae5b-d8a4-48d3-a138-ff425074d426",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attention weights: tensor([0.1455, 0.2278, 0.2249, 0.1285, 0.1077, 0.1656])\n",
+      "Sum: tensor(1.0000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights_2_tmp = attn_scores_2 / attn_scores_2.sum()\n",
+    "print(\"Attention weights:\", attn_weights_2_tmp)\n",
+    "print(\"Sum:\", attn_weights_2_tmp.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "76bd05d6-a347-4d5e-b7a4-2693835478f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: tensor(1.0000)\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e10015dd-2691-44d7-b3dd-315725ff9abb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
