--- a/exercises/ch-03/attention.ipynb
+++ b/exercises/ch-03/attention.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "76bd05d6-a347-4d5e-b7a4-2693835478f6",
    "metadata": {},
    "outputs": [
@@ -113,16 +113,143 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum: tensor(1.0000)\n"
+      "attention weights: tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n",
+      "Sum: tensor(1.)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Using softmax\n",
+    "def softmax_naive(x):\n",
+    "    return torch.exp(x) / torch.exp(x).sum(dim=0)\n",
+    "attn_weights_2_naive = softmax_naive(attn_scores_2)\n",
+    "print(\"attention weights:\", attn_weights_2_naive)\n",
+    "print(\"Sum:\", attn_weights_2_naive.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e10015dd-2691-44d7-b3dd-315725ff9abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attention weights: tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n",
+      "Sum: tensor(1.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now using torch.softmax()\n",
+    "attn_weights_2 = torch.softmax(attn_scores_2, dim=0)\n",
+    "print(\"attention weights:\", attn_weights_2)\n",
+    "print(\"Sum:\", attn_weights_2.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cc947032-9571-42be-90b6-aaa992a55241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4300, 0.1500, 0.8900],\n",
+      "        [0.5500, 0.8700, 0.6600],\n",
+      "        [0.5700, 0.8500, 0.6400],\n",
+      "        [0.2200, 0.5800, 0.3300],\n",
+      "        [0.7700, 0.2500, 0.1000],\n",
+      "        [0.0500, 0.8000, 0.5500]])\n",
+      "tensor([0.4419, 0.6515, 0.5683])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating context vector for inputs[1]\n",
+    "query = inputs[1]\n",
+    "print(inputs)\n",
+    "context_vec_2 = torch.zeros(query.shape)\n",
+    "for i, val in enumerate(inputs):\n",
+    "    context_vec_2 += attn_weights_2[i] * val\n",
+    "print(context_vec_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e242139f-a8ab-4aae-9509-a6f47c6dfbd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9995, 0.9544, 0.9422, 0.4753, 0.4576, 0.6310],\n",
+      "        [0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865],\n",
+      "        [0.9422, 1.4754, 1.4570, 0.8296, 0.7154, 1.0605],\n",
+      "        [0.4753, 0.8434, 0.8296, 0.4937, 0.3474, 0.6565],\n",
+      "        [0.4576, 0.7070, 0.7154, 0.3474, 0.6654, 0.2935],\n",
+      "        [0.6310, 1.0865, 1.0605, 0.6565, 0.2935, 0.9450]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores = torch.empty(6,6)\n",
+    "for i, x_i in enumerate(inputs):\n",
+    "    for j, x_j in enumerate(inputs):\n",
+    "        attn_scores[i, j] = torch.dot(x_i, x_j)\n",
+    "\n",
+    "# simplified version of above loop\n",
+    "attn_scores = inputs @ inputs.T\n",
+    "print(attn_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2c31185a-a041-4767-8121-3e009b39bdae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we normalize each row so each row sum up to 1\n",
+    "attn_weights = torch.softmax(attn_scores, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "73690b03-aec2-4e62-aef7-2554bedce619",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2098, 0.2006, 0.1981, 0.1242, 0.1220, 0.1452],\n",
+       "        [0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581],\n",
+       "        [0.1390, 0.2369, 0.2326, 0.1242, 0.1108, 0.1565],\n",
+       "        [0.1435, 0.2074, 0.2046, 0.1462, 0.1263, 0.1720],\n",
+       "        [0.1526, 0.1958, 0.1975, 0.1367, 0.1879, 0.1295],\n",
+       "        [0.1385, 0.2184, 0.2128, 0.1420, 0.0988, 0.1896]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attn_weights"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10015dd-2691-44d7-b3dd-315725ff9abb",
+   "id": "685948d6-e22d-4cc8-895a-2d46d8dd70a8",
    "metadata": {},
    "outputs": [],
    "source": []
