ch03: context vector

--- a/exercises/ch-03/attention.ipynb
+++ b/exercises/ch-03/attention.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "id": "e242139f-a8ab-4aae-9509-a6f47c6dfbd3",
    "metadata": {},
    "outputs": [
@@ -211,18 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "2c31185a-a041-4767-8121-3e009b39bdae",
    "metadata": {},
    "outputs": [],
    "source": [
     "# we normalize each row so each row sum up to 1\n",
-    "attn_weights = torch.softmax(attn_scores, dim=1)"
+    "attn_weights = torch.softmax(attn_scores, dim=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "73690b03-aec2-4e62-aef7-2554bedce619",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "        [0.1385, 0.2184, 0.2128, 0.1420, 0.0988, 0.1896]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,8 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "685948d6-e22d-4cc8-895a-2d46d8dd70a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4421, 0.5931, 0.5790],\n",
+      "        [0.4419, 0.6515, 0.5683],\n",
+      "        [0.4431, 0.6496, 0.5671],\n",
+      "        [0.4304, 0.6298, 0.5510],\n",
+      "        [0.4671, 0.5910, 0.5266],\n",
+      "        [0.4177, 0.6503, 0.5645]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_context_vecs = attn_weights @ inputs\n",
+    "print(all_context_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbb6a650-10bb-4aee-9ddf-49df7116243e",
    "metadata": {},
    "outputs": [],
    "source": []
