--- a/exercises/ch-03/compact_self_attention.ipynb
+++ b/exercises/ch-03/compact_self_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3d656207-c8b8-4daa-9f7d-192496852e24",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2e2a97ba-d736-48e3-afa4-ac7881df6dc8",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1b188f46-edd1-4936-b0e5-8999c22b79e2",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "6113d7b3",
    "metadata": {},
    "outputs": [],
@@ -122,13 +122,14 @@
     "        attn_weights = torch.softmax(\n",
     "            attn_scores / keys.shape[-1] ** 0.5, dim=-1\n",
     "        )\n",
+    "        print(attn_weights)\n",
     "        context_vec = attn_weights @ values\n",
     "        return context_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "030f88be",
    "metadata": {},
    "outputs": [
@@ -136,6 +137,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
+      "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n",
       "tensor([[-0.0739,  0.0713],\n",
       "        [-0.0748,  0.0703],\n",
       "        [-0.0749,  0.0702],\n",
@@ -152,9 +160,264 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "499081ef",
+   "metadata": {},
+   "source": [
+    "## Developing Causal Attention Mechanism\n",
+    "We remove the relationship between tokens and the future tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "29669045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
+      "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We reuse the content in\n",
+    "queries = sa_v2.W_query(inputs)\n",
+    "keys = sa_v2.W_key(inputs)\n",
+    "attn_scores = queries @ keys.T\n",
+    "attn_weights = torch.softmax(attn_scores / keys.shape[-1] ** 0.5, dim=-1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f2e3d638",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 0., 0., 0., 0.],\n",
+      "        [1., 1., 0., 0., 0., 0.],\n",
+      "        [1., 1., 1., 0., 0., 0.],\n",
+      "        [1., 1., 1., 1., 0., 0.],\n",
+      "        [1., 1., 1., 1., 1., 0.],\n",
+      "        [1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = attn_scores.shape[0]\n",
+    "# torch.tril is to remove the triangular part of a tensor\n",
+    "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+    "print(mask_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fcda5570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2041, 0.1659, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.0000, 0.0000],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "masked_simple = attn_weights * mask_simple\n",
+    "print(masked_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d644a05b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renormalize the attention weights so each row sum up to 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2c15a1cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_sums = masked_simple.sum(dim=-1, keepdim=True)\n",
+    "masked_simple_norm = masked_simple / row_sums\n",
+    "print(masked_simple_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7ed21c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[False,  True,  True,  True,  True,  True],\n",
+      "        [False, False,  True,  True,  True,  True],\n",
+      "        [False, False, False,  True,  True,  True],\n",
+      "        [False, False, False, False,  True,  True],\n",
+      "        [False, False, False, False, False,  True],\n",
+      "        [False, False, False, False, False, False]])\n",
+      "tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4594, 0.1703, 0.1731,   -inf,   -inf,   -inf],\n",
+      "        [0.2642, 0.1024, 0.1036, 0.0186,   -inf,   -inf],\n",
+      "        [0.2183, 0.0874, 0.0882, 0.0177, 0.0786,   -inf],\n",
+      "        [0.3408, 0.1270, 0.1290, 0.0198, 0.1290, 0.0078]],\n",
+      "       grad_fn=<MaskedFillBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply softmax, but we need to convert the 0 to -inf first. Becase the softmax function will treat them as zero probability.\n",
+    "mask = torch.triu(torch.ones(context_length ,context_length), diagonal=1)\n",
+    "print(mask.bool())\n",
+    "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "print(masked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f9d64917",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(masked / keys.shape[-1] ** 0.5, dim=1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e27234f",
+   "metadata": {},
+   "source": [
+    "## Implementing dropout\n",
+    "dropout is a technique to prevent overfitting by dropping the value out.\n",
+    "\n",
+    "How dropout works? It drops the n% value of the tensor to zero. n = dropout rate. While the surviving numbers are scaled up by a factor of 1/0.5 = 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "704781fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 2., 0., 2., 2., 0.],\n",
+      "        [0., 0., 0., 2., 0., 2.],\n",
+      "        [2., 2., 2., 2., 0., 2.],\n",
+      "        [0., 2., 2., 0., 0., 2.],\n",
+      "        [0., 2., 0., 2., 0., 2.],\n",
+      "        [0., 2., 2., 2., 2., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "dropout = torch.nn.Dropout(0.5) # dropout rate 50%\n",
+    "example = torch.ones(6,6)\n",
+    "print(dropout(example))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7331f3c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.6194, 0.6206, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.4925, 0.4638, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.3941, 0.0000],\n",
+      "        [0.3869, 0.3327, 0.0000, 0.3084, 0.3331, 0.3058]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dropout(attn_weights))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499081ef",
+   "id": "933814ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Implementing a compact causal attention class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f67806",
    "metadata": {},
    "outputs": [],
    "source": []
