--- a/exercises/ch-03/compact_self_attention.ipynb
+++ b/exercises/ch-03/compact_self_attention.ipynb
@@ -405,19 +405,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "933814ea",
+   "metadata": {},
+   "source": [
+    "## Implementing a compact causal attention class\n",
+    "we'll make sure that the code able to handle batches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d9f67806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4300, 0.1500, 0.8900],\n",
+      "        [0.5500, 0.8700, 0.6600],\n",
+      "        [0.5700, 0.8500, 0.6400],\n",
+      "        [0.2200, 0.5800, 0.3300],\n",
+      "        [0.7700, 0.2500, 0.1000],\n",
+      "        [0.0500, 0.8000, 0.5500]])\n",
+      "torch.Size([2, 6, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inputs)\n",
+    "batch = torch.stack((inputs,inputs), dim=0)\n",
+    "print(batch.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bf6e17b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Implementing a compact causal attention class"
+    "class CausalAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.d_out = d_out \n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "        # this register_buffer function offers to move the buffers to the appropriate device (GPU/CPU). \n",
+    "        # avoiding mismatch errors\n",
+    "        self.register_buffer(\n",
+    "            'mask',\n",
+    "            torch.triu(torch.ones(context_length, context_length)),\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(1,2)\n",
+    "        attn_scores.masked_fill(\n",
+    "            self.mask.bool()[:num_tokens, :num_tokens], -torch.inf)\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1] ** 0.5, dim=-1\n",
+    "        )        \n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "        context_vec = attn_weights @ values \n",
+    "        return context_vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8882d92f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1]\n",
+    "ca = CausalAttention(d_in, d_out, context_length, 0.0)\n",
+    "context_vecs = ca(batch)\n",
+    "print('context_vecs.shape:', context_vecs.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f67806",
+   "id": "fcfea7e1",
    "metadata": {},
    "outputs": [],
    "source": []
