ch03: multi head attention

--- a/exercises/ch-03/attention.ipynb
+++ b/exercises/ch-03/attention.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1e2f9d16-87ad-4a9a-837e-bd85431aea7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2 \n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d1677f57-b8f1-4387-9761-9c9124121087",
    "metadata": {},
    "outputs": [],
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3106517b-91fe-4226-a72b-1a1263117455",
    "metadata": {},
    "outputs": [
@@ -50,7 +41,7 @@
        "torch.Size([6, 3])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f355477b-3917-49d5-b611-0b671d897a88",
    "metadata": {},
    "outputs": [
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0274ae5b-d8a4-48d3-a138-ff425074d426",
    "metadata": {},
    "outputs": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "76bd05d6-a347-4d5e-b7a4-2693835478f6",
    "metadata": {},
    "outputs": [
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e10015dd-2691-44d7-b3dd-315725ff9abb",
    "metadata": {},
    "outputs": [
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cc947032-9571-42be-90b6-aaa992a55241",
    "metadata": {},
    "outputs": [
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e242139f-a8ab-4aae-9509-a6f47c6dfbd3",
    "metadata": {},
    "outputs": [
@@ -220,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2c31185a-a041-4767-8121-3e009b39bdae",
    "metadata": {},
    "outputs": [],
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "73690b03-aec2-4e62-aef7-2554bedce619",
    "metadata": {},
    "outputs": [
@@ -246,7 +237,7 @@
        "        [0.1385, 0.2184, 0.2128, 0.1420, 0.0988, 0.1896]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "685948d6-e22d-4cc8-895a-2d46d8dd70a8",
    "metadata": {},
    "outputs": [
@@ -289,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "4431c1da-fb4b-4761-8179-1cb6a2759653",
    "metadata": {},
    "outputs": [],
@@ -301,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "2d9a55fd-7508-4e57-96ca-33a62216b66d",
    "metadata": {},
    "outputs": [],
@@ -326,13 +317,17 @@
       "Parameter containing:\n",
       "tensor([[0.2961, 0.5166],\n",
       "        [0.2517, 0.6886],\n",
-      "        [0.0740, 0.8665]])\n"
+      "        [0.0740, 0.8665]])\n",
+      "tensor([[0.1853, 0.6339],\n",
+      "        [0.3894, 0.7398],\n",
+      "        [0.2288, 0.5185]])\n"
      ]
     }
    ],
    "source": [
     "print(x_2)\n",
-    "print(W_query)"
+    "print(W_query)\n",
+    "print(torch.rand(d_in, d_out))"
    ]
   },
   {
