--- a/exercises/ch-03/compact_self_attention.ipynb
+++ b/exercises/ch-03/compact_self_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "3d656207-c8b8-4daa-9f7d-192496852e24",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "2e2a97ba-d736-48e3-afa4-ac7881df6dc8",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "1b188f46-edd1-4936-b0e5-8999c22b79e2",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "6113d7b3",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "030f88be",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "29669045",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "f2e3d638",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "2c15a1cc",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "7ed21c9c",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "f9d64917",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "704781fc",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "7331f3c4",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "d9f67806",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "bf6e17b4",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "8882d92f",
    "metadata": {},
    "outputs": [
@@ -501,9 +501,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcfea7e1",
+   "metadata": {},
+   "source": [
+    "# Multi-head attention\n",
+    "Until now, we just implemented single-head attention. We will implement multi-head attention by stacking multiple single-head attention."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a61ff186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttentionWrapper(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        self.heads = nn.ModuleList(\n",
+    "            [CausalAttention(\n",
+    "                d_in, d_out, context_length, dropout, qkv_bias\n",
+    "            ) for _ in range(num_heads)]\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        return torch.cat([head(x) for head in self.heads], dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8b0a9609",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context_length: 6\n",
+      "tensor([[[-0.5337, -0.1051,  0.5085,  0.3508],\n",
+      "         [-0.5323, -0.1080,  0.5084,  0.3508],\n",
+      "         [-0.5323, -0.1079,  0.5084,  0.3506],\n",
+      "         [-0.5297, -0.1076,  0.5074,  0.3471],\n",
+      "         [-0.5311, -0.1066,  0.5076,  0.3446],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]],\n",
+      "\n",
+      "        [[-0.5337, -0.1051,  0.5085,  0.3508],\n",
+      "         [-0.5323, -0.1080,  0.5084,  0.3508],\n",
+      "         [-0.5323, -0.1079,  0.5084,  0.3506],\n",
+      "         [-0.5297, -0.1076,  0.5074,  0.3471],\n",
+      "         [-0.5311, -0.1066,  0.5076,  0.3446],\n",
+      "         [-0.5299, -0.1081,  0.5077,  0.3493]]], grad_fn=<CatBackward0>)\n",
+      "torch.Size([2, 6, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1]\n",
+    "print('context_length:',context_length)\n",
+    "d_in, d_out = 3, 2\n",
+    "mha = MultiHeadAttentionWrapper(\n",
+    "    d_in, d_out, context_length, 0.0, 2\n",
+    ")\n",
+    "context_vecs = mha(batch)\n",
+    "print(context_vecs)\n",
+    "print(context_vecs.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6adfa33d",
+   "metadata": {},
+   "source": [
+    "## More efficient multi-head attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0cd7074c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \"d_out must be divisible by num_heads\"\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out  // num_heads\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        print(self.W_key)\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "        \n",
+    "        # We add a 'num_heads' dimension\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # transpose from shape (b, num_tokens, num_heads, head_dim) to (b, num_heads, num_tokens, head_dim)\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
+    "\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1] ** 0.5, dim=-1\n",
+    "        )\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = (attn_weights @  values).transpose(1, 2)\n",
+    "        context_vec = context_vec.contiguous().view(b, num_tokens, self.d_out)\n",
+    "        context_vec = self.out_proj(context_vec)\n",
+    "        return context_vec\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f0a3da11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear(in_features=3, out_features=2, bias=False)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.1788, -0.6077],\n",
+       "         [-0.2099, -0.6397],\n",
+       "         [-0.2199, -0.6547],\n",
+       "         [-0.1932, -0.6522],\n",
+       "         [-0.1752, -0.6609],\n",
+       "         [-0.1716, -0.6540]],\n",
+       "\n",
+       "        [[-0.1788, -0.6077],\n",
+       "         [-0.2099, -0.6397],\n",
+       "         [-0.2199, -0.6547],\n",
+       "         [-0.1932, -0.6522],\n",
+       "         [-0.1752, -0.6609],\n",
+       "         [-0.1716, -0.6540]]], grad_fn=<ViewBackward0>)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "mha = MultiHeadAttention(3, 2, 6, 0, 2)\n",
+    "mha(batch)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcfea7e1",
+   "id": "c9f208bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -511,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
