appendix: multilayer nn

--- a/appendix/A_introduction_to_pytorch/multilayer-nn.ipynb
+++ b/appendix/A_introduction_to_pytorch/multilayer-nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1928,  0.0651,  0.0459]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.1486,  0.1065, -0.1208]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2806, 0.3632, 0.3562]])\n"
+      "tensor([[0.3013, 0.3889, 0.3098]])\n"
      ]
     }
    ],
@@ -130,11 +130,258 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up efficient data loaders (Appendix A.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = torch.tensor([\n",
+    "    [-1.2, 3.1],\n",
+    "    [-0.9, 2.9],\n",
+    "    [-0.5, 2.6],\n",
+    "    [2.3, -1.1],\n",
+    "    [2.7, -1.5]\n",
+    "])\n",
+    "y_train = torch.tensor([0,0,0,1,1])\n",
+    "X_test = torch.tensor([\n",
+    "    [-0.8, 2.8],\n",
+    "    [2.6, -1.6]\n",
+    "])\n",
+    "y_test = torch.tensor([0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset \n",
+    "\n",
+    "class ToyDataset(Dataset):\n",
+    "    def __init__(self, X, y):\n",
+    "        self.features = X\n",
+    "        self.labels = y\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        one_x = self.features[index]\n",
+    "        one_y = self.labels[index]\n",
+    "        return one_x, one_y\n",
+    "    def __len__(self):\n",
+    "        return self.labels.shape[0]\n",
+    "train_ds = ToyDataset(X_train, y_train)\n",
+    "test_ds = ToyDataset(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader \n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "\n",
+    "# Instantiating data loader\n",
+    "train_loader = DataLoader(\n",
+    "    dataset=train_ds,\n",
+    "    batch_size=2,\n",
+    "    shuffle=True,\n",
+    "    num_workers=0\n",
+    ")\n",
+    "test_loader = DataLoader(\n",
+    "    dataset=test_ds,\n",
+    "    batch_size=2,\n",
+    "    shuffle=False,\n",
+    "    num_workers=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch 1: tensor([[ 2.3000, -1.1000],\n",
+      "        [-0.9000,  2.9000]]) tensor([1, 0])\n",
+      "Batch 2: tensor([[-1.2000,  3.1000],\n",
+      "        [-0.5000,  2.6000]]) tensor([0, 0])\n",
+      "Batch 3: tensor([[ 2.7000, -1.5000]]) tensor([1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, (x,y) in enumerate(train_loader):\n",
+    "    print(f\"Batch {idx+1}:\", x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch 1: tensor([[ 2.3000, -1.1000],\n",
+      "        [ 2.7000, -1.5000]]) tensor([1, 1])\n",
+      "Batch 2: tensor([[-1.2000,  3.1000],\n",
+      "        [-0.9000,  2.9000]]) tensor([0, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we drop the last batch in each epoch, because the last batch only have a single example, \n",
+    "# this could disturb convergence\n",
+    "train_loader = DataLoader(\n",
+    "    dataset=train_ds,\n",
+    "    batch_size=2,\n",
+    "    shuffle=True,\n",
+    "    # num_workers=0 to make the data loading happen in the main process, not separate worker process.\n",
+    "    # this is ok if the dataset is small\n",
+    "    num_workers=0,\n",
+    "    drop_last=True\n",
+    ")\n",
+    "for idx, (x,y) in enumerate(train_loader):\n",
+    "    print(f\"Batch {idx+1}:\", x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 001/003 | Batch 000/002 | Train Loss 0.75\n",
+      "Epoch: 001/003 | Batch 001/002 | Train Loss 0.65\n",
+      "Epoch: 002/003 | Batch 000/002 | Train Loss 0.44\n",
+      "Epoch: 002/003 | Batch 001/002 | Train Loss 0.13\n",
+      "Epoch: 003/003 | Batch 000/002 | Train Loss 0.03\n",
+      "Epoch: 003/003 | Batch 001/002 | Train Loss 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F \n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "model = NeuralNetwork(num_inputs=2, num_outputs=2)\n",
+    "# SGD = stochastic gradient descent\n",
+    "optimizer = torch.optim.SGD(\n",
+    "    model.parameters(), lr=0.5\n",
+    ")\n",
+    "\n",
+    "num_epochs = 3\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    for batch_idx, (features, labels) in enumerate(train_loader):\n",
+    "        logits = model(features)\n",
+    "        loss = F.cross_entropy(logits, labels)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        ### LOGGING\n",
+    "        print(f\"Epoch: {epoch+1:03d}/{num_epochs:03d}\",\n",
+    "              f\"| Batch {batch_idx:03d}/{len(train_loader):03d}\",\n",
+    "            f\"| Train Loss {loss:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 2.8569, -4.1618],\n",
+      "        [ 2.5382, -3.7548],\n",
+      "        [ 2.0944, -3.1820],\n",
+      "        [-1.4814,  1.4816],\n",
+      "        [-1.7176,  1.7342]])\n",
+      "tensor([[    0.9991,     0.0009],\n",
+      "        [    0.9982,     0.0018],\n",
+      "        [    0.9949,     0.0051],\n",
+      "        [    0.0491,     0.9509],\n",
+      "        [    0.0307,     0.9693]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.set_printoptions(sci_mode=False)\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(X_train)\n",
+    "print(outputs)\n",
+    "probas = torch.softmax(outputs, dim=1)\n",
+    "print(probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 0, 0, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = torch.argmax(probas, dim=1)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([True, True, True, True, True])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions == y_train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute"
+   ]
   }
  ],
  "metadata": {
