--- a/appendix/A_introduction_to_pytorch/multilayer-nn.ipynb
+++ b/appendix/A_introduction_to_pytorch/multilayer-nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1486,  0.1065, -0.1208]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[ 0.0389,  0.0008, -0.1663]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3013, 0.3889, 0.3098]])\n"
+      "tensor([[0.3601, 0.3466, 0.2933]])\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,17 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch 1: tensor([[ 2.3000, -1.1000],\n",
-      "        [ 2.7000, -1.5000]]) tensor([1, 1])\n",
-      "Batch 2: tensor([[-1.2000,  3.1000],\n",
-      "        [-0.9000,  2.9000]]) tensor([0, 0])\n"
+      "Batch 1: tensor([[-1.2000,  3.1000],\n",
+      "        [-0.5000,  2.6000]]) tensor([0, 0])\n",
+      "Batch 2: tensor([[ 2.3000, -1.1000],\n",
+      "        [-0.9000,  2.9000]]) tensor([1, 0])\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "tensor([True, True, True, True, True])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,12 +376,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute"
+    "def compute_accuracy(model, dataloader):\n",
+    "    model = model.eval()\n",
+    "    correct = 0\n",
+    "    total_examples = 0\n",
+    "    for idx, (features, labels) in enumerate(dataloader):\n",
+    "        print(features,labels)\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(features)\n",
+    "        predictions = torch.argmax(logits, dim=1)\n",
+    "        compare = labels == predictions\n",
+    "        correct += torch.sum(compare)\n",
+    "        total_examples += len(compare)\n",
+    "    return (correct / total_examples).item()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.9000,  2.9000],\n",
+      "        [-1.2000,  3.1000]]) tensor([0, 0])\n",
+      "tensor([[ 2.7000, -1.5000],\n",
+      "        [ 2.3000, -1.1000]]) tensor([1, 1])\n",
+      "1.0\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x1333e2ce0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(compute_accuracy(model, train_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Saving model\n",
+    "torch.save(model.state_dict(), \"model.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
