--- a/exercises/ch-04/dummygpt.ipynb
+++ b/exercises/ch-04/dummygpt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "        self.tok_emb = nn.Embedding(cfg[\"vocab_size\"], cfg[\"emb_dim\"])\n",
     "        self.pos_emb = nn.Embedding(cfg[\"context_length\"], cfg[\"emb_dim\"])\n",
     "        self.drop_emb = nn.Dropout(cfg[\"drop_rate\"])\n",
-    "        self.trf_blocks = nn.Seqential(\n",
+    "        self.trf_blocks = nn.Sequential(\n",
     "            *[DummyTransformerBlock(cfg) for _ in range(cfg[\"n_layers\"])]\n",
     "        )\n",
     "        self.final_norm = DummyLayerNorm(cfg[\"emb_dim\"])\n",
@@ -73,6 +73,181 @@
     "        super().__init__()\n",
     "    def forward(self, x):\n",
     "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[6109, 3626, 6100,  345],\n",
+      "        [6109, 1110, 6622,  257]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken \n",
+    "\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "batch = []\n",
+    "txt1 = \"Every effort moves you\"\n",
+    "txt2 = \"Every day holds a\"\n",
+    "batch.append(torch.tensor(tokenizer.encode(txt1)))\n",
+    "batch.append(torch.tensor(tokenizer.encode(txt2)))\n",
+    "batch = torch.stack(batch, dim=0)\n",
+    "print(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output shape: torch.Size([2, 4, 50257])\n",
+      "tensor([[[-1.2034,  0.3201, -0.7130,  ..., -1.5548, -0.2390, -0.4667],\n",
+      "         [-0.1192,  0.4539, -0.4432,  ...,  0.2392,  1.3469,  1.2430],\n",
+      "         [ 0.5307,  1.6720, -0.4695,  ...,  1.1966,  0.0111,  0.5835],\n",
+      "         [ 0.0139,  1.6754, -0.3388,  ...,  1.1586, -0.0435, -1.0400]],\n",
+      "\n",
+      "        [[-1.0908,  0.1798, -0.9484,  ..., -1.6047,  0.2439, -0.4530],\n",
+      "         [-0.7860,  0.5581, -0.0610,  ...,  0.4835, -0.0077,  1.6621],\n",
+      "         [ 0.3567,  1.2698, -0.6398,  ..., -0.0162, -0.1296,  0.3717],\n",
+      "         [-0.2407, -0.7349, -0.5102,  ...,  2.0057, -0.3694,  0.1814]]],\n",
+      "       grad_fn=<UnsafeViewBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "model = DummyGPTModel(GPT_CONFIG_124M)\n",
+    "logits = model(batch)\n",
+    "print(\"output shape:\", logits.shape)\n",
+    "print(logits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Applying layer normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2260, 0.3470, 0.0000, 0.2216, 0.0000, 0.0000],\n",
+      "        [0.2133, 0.2394, 0.0000, 0.5198, 0.3297, 0.0000]],\n",
+      "       grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "batch_example = torch.randn(2,5)\n",
+    "layer = nn.Sequential(nn.Linear(5,6), nn.ReLU())\n",
+    "out = layer(batch_example)\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:\n",
+      " tensor([[0.1324],\n",
+      "        [0.2170]], grad_fn=<MeanBackward1>)\n",
+      "Variance:\n",
+      " tensor([[0.0231],\n",
+      "        [0.0398]], grad_fn=<VarBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the mean and variance\n",
+    "# dim=-1 means calculate the last dimension (in this case, one mean per row)\n",
+    "mean =out.mean(dim=-1, keepdim=True)\n",
+    "var = out.var(dim=-1, keepdim=True)\n",
+    "print(\"Mean:\\n\", mean)\n",
+    "print(\"Variance:\\n\", var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized layer outputs:\n",
+      " tensor([[ 0.6159,  1.4126, -0.8719,  0.5872, -0.8719, -0.8719],\n",
+      "        [-0.0189,  0.1121, -1.0876,  1.5173,  0.5647, -1.0876]],\n",
+      "       grad_fn=<DivBackward0>)\n",
+      "Mean:\n",
+      " tensor([[    -0.0000],\n",
+      "        [     0.0000]], grad_fn=<MeanBackward1>)\n",
+      "Variance:\n",
+      " tensor([[1.0000],\n",
+      "        [1.0000]], grad_fn=<VarBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply normalization to the layer outputs we obtained earlier\n",
+    "out_norm = (out - mean) / torch.sqrt(var)\n",
+    "mean = out_norm.mean(dim=-1, keepdim=True)\n",
+    "var = out_norm.var(dim=-1, keepdim=True)\n",
+    "torch.set_printoptions(sci_mode=False)\n",
+    "print(\"Normalized layer outputs:\\n\", out_norm)\n",
+    "print(\"Mean:\\n\", mean) # the output is 0.0000000059605, very close to zero, so we set printoptions sci_mode=False\n",
+    "print(\"Variance:\\n\", var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implement a layer normalization class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNorm(nn.Module):\n",
+    "    def __init__(self, emb_dim):\n",
+    "        super().__init__()\n",
+    "        self.eps = 1e-5\n",
+    "        # scale and shift is a trainable parameters, LLM automatically adjust it\n",
+    "        self.scale = nn.Parameter(torch.ones(emb_dim))\n",
+    "        self.shift = nn.Parameter(torch.zeros(emb_dim))\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(dim=-1, keepdim=True)\n",
+    "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
+    "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "        return self.scale * norm_x + self.shift"
    ]
   },
   {
