--- a/exercises/ch-04/dummygpt.ipynb
+++ b/exercises/ch-04/dummygpt.ipynb
@@ -252,6 +252,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: tensor([[    -0.0000],\n",
+      "        [     0.0000]], grad_fn=<MeanBackward1>)\n",
+      "Var: tensor([[1.0000],\n",
+      "        [1.0000]], grad_fn=<VarBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ln = LayerNorm(emb_dim=5)\n",
+    "out_ln = ln(batch_example)\n",
+    "mean = out_ln.mean(dim=-1, keepdim=True)\n",
+    "var = out_ln.var(dim=-1, unbiased=False, keepdim=True)\n",
+    "print(\"Mean:\",mean)\n",
+    "print(\"Var:\",var)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
